# stage1

./: .gitignore  Cargo.toml  Dockerfile.build  Dockerfile.dev  Dockerfile.runtime  Makefile  README.md  build.mk  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
crates/deploy/: Cargo.toml
crates/deploy/src/: main.rs
crates/ed25519-sign/: Cargo.toml
crates/ed25519-sign/src/: lib.rs
crates/example-stage2/: README.md
crates/example-stage2/src/: main.rs
crates/metadata/: Cargo.toml
crates/metadata/schema/: stage2.schema.json
crates/metadata/src/: lib.rs
crates/mkuki/: Cargo.toml  README.md
crates/mkuki/src/: cpio.rs  lib.rs  main.rs  sign.rs  uki.rs
crates/stage0/: Cargo.toml  README.md
crates/stage0-test-payload/: Cargo.toml
crates/stage0-test-payload/src/: main.rs
crates/stage0/src/: config.rs  dns4.rs  embedded.rs  http.rs  main.rs  metadata.rs  net.rs  secauth.rs  sig.rs  tcg2.rs  tcp4.rs  timing.rs
crates/stage1/: Cargo.toml  README.md
crates/stage1/src/: main.rs  sig.rs
tools/: publish.sh
tools/build-stage0/: build.sh
tools/build-uki/: .gitignore  Makefile  build.sh  download-verify-rpm.sh  fedora-deps.mk  init  update-fedora-deps.py  verify-rpm-gpg.sh
tools/build-uki/keys/: README.md
tools/publish/: upload-uki.sh
tools/publish/ec2/: create-ami.sh
tools/publish/gcp/: create-image.sh
tools/qemu-test/: boot.sh
