[workspace]
members = ["crates/stage1", "crates/example-stage2", "crates/mkuki"]
# stage0 is a UEFI (no_std, *-unknown-uefi) application and cannot be built for
# the musl target this workspace defaults to. It is its own workspace so that
# `cargo build --all` (used to build the Linux stages) does not try to compile
# it for the host/musl target.
exclude = ["crates/stage0", "crates/stage0-test-payload"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
anyhow = "1.0"
hex = "0.4"
libc = "0.2"

vaportpm-attest = { git = "https://github.com/lockboot/vaportpm" }

reqwest = { version = "=0.12.24", default-features = false, features = ["blocking", "rustls-tls-webpki-roots-no-provider"] }
rustls = { version = "=0.23.23", default-features = false, features = ["std", "tls12"] }
rustls-rustcrypto = { version = "=0.0.2-alpha", default-features = false, features = ["std", "zeroize"] }
webpki = { package = "rustls-webpki", version = "=0.102.8", default-features = false, features = ["alloc"] }
pki-types = { package = "rustls-pki-types", version = "=1.13.0", default-features = false, features = ["std"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Maximize optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler
