[workspace]
members = ["crates/stage1", "crates/example-stage2", "crates/mkuki", "crates/ed25519-sign", "crates/metadata", "crates/deploy"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bytes = "1"
sha2 = "0.10"
anyhow = "1.0"
hex = "0.4"
libc = "0.2"
# ed25519 verification for signed-mode payloads (verify-only). Same crate stage0/mkuki
# use — the detached .sig is a cross-repo wire contract.
ed25519-compact = { version = "2", default-features = false }

# Pinned to the vaportpm v0.3.0 release commit: immutable SHA + a `version` guard (the build fails
# if the rev ever drifts to a commit whose crate version isn't 0.3.0). Tag is not GPG-signed yet;
# a signed release will follow. Bump both on the next vaportpm release.
vaportpm-attest = { git = "https://github.com/lockboot/vaportpm", rev = "7041f461eb33bc15ad914466042b7befe358d119", version = "=0.3.0" }

reqwest = { version = "=0.12.24", default-features = false, features = ["blocking", "rustls-tls-webpki-roots-no-provider"] }
rustls = { version = "=0.23.23", default-features = false, features = ["std", "tls12"] }
rustls-rustcrypto = { version = "=0.0.2-alpha", default-features = false, features = ["std", "zeroize"] }
webpki = { package = "rustls-webpki", version = "=0.102.8", default-features = false, features = ["alloc"] }
pki-types = { package = "rustls-pki-types", version = "=1.13.0", default-features = false, features = ["std"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Maximize optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler
