[package]
name = "stage0-test-payload"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Standalone workspace (UEFI-only), like stage0.
[workspace]

[[bin]]
name = "stage0-test-payload"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.35", features = ["alloc", "global_allocator", "panic_handler"] }
vaportpm-attest = { git = "https://github.com/lockboot/vaportpm", default-features = false }
anyhow = { version = "1.0", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
