[package]
name = "stage0"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Standalone workspace: stage0 only builds for *-unknown-uefi, so it is kept out
# of the parent lockboot workspace (which defaults to a musl target).
[workspace]

[features]
# Verbose per-connection/per-request/per-segment network trace via `sdbg!`. Off by
# default (the milestone log + boot-clock timestamps suffice); build with
# `--features verbose` to debug DNS/TCP/HTTP behaviour.
verbose = []

[dependencies]
# UEFI runtime: entry point, boot services, protocols (HTTP, TCG2, LoadImage).
uefi = { version = "0.35", features = ["alloc", "global_allocator", "panic_handler"] }
uefi-raw = "0.11"

# no_std TPM core — provides TpmTransport + PCR ops over our EFI_TCG2 transport.
# Consumed from git like stage1 (the build never sees a local vaportpm checkout).
vaportpm-attest = { git = "https://github.com/lockboot/vaportpm", default-features = false }

# no_std JSON + hashing for the metadata doc and payload integrity check.
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# ed25519 signature verification for "signed mode" payloads. no_std, verify-only
# (no `random`/`std`): the release public key is pinned in the metadata doc and
# the detached .sig is fetched alongside the payload.
ed25519-compact = { version = "2", default-features = false }

# Error type at the TpmTransport boundary (vaportpm-attest uses anyhow::Result).
anyhow = { version = "1.0", default-features = false }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
