[package]
name = "stage1"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
reqwest = { workspace = true }
rustls = { workspace = true }
rustls-rustcrypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
ed25519-compact = { workspace = true }
vaportpm-attest = { workspace = true }
libc = { workspace = true }
