[package]
name = "stage1"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
metadata = { path = "../metadata" }
ed25519-sign = { path = "../ed25519-sign" }
reqwest = { workspace = true }
rustls = { workspace = true }
rustls-rustcrypto = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
vaportpm-attest = { workspace = true }
libc = { workspace = true }
